# Skelenimator

./: .gitignore  CMakeLists.txt  Makefile  bones.txt  cmake_install.cmake
src/: Bone.c  Bone.h  main.c
